<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"

    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judulbuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/judulbuku"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_penulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:gravity="center"
            android:text="@string/penulis"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="396dp"
            android:layout_height="256dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:contentDescription="@string/cover"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_tahunterbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/tahunterbit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_penerbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/penerbit"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/sinopsis"
            android:textSize="@dimen/medium_text" />

        <Button
            android:id="@+id/beli"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6678FA"
            android:text="@string/beli"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>