<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="256dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:contentDescription="@string/cover"
            app:srcCompat="@drawable/ic_book_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginBottom="@dimen/medium_margin"
                android:gravity="center|start"
                android:text="@string/judulbuku"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_penulis"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/penulis"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>